--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0",
+        "sass": "^1.63.6",
+        "sass-loader": "^13.3.2"
     }
 }
