--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bootstrap": "^5.3.0",
         "bootstrap-icons": "^1.10.5",
+        "chart.js": "^4.3.0",
         "sass": "^1.63.6",
         "sass-loader": "^13.3.2"
     }
